first complete version
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9680 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/authorlist_epjc.tex
+++ b/2014/90m paper/authorlist_epjc.tex
@@ -4,7 +4,7 @@
     Second Author\thanksref{e2,addr2,addr3} %etc.
 }
 
-\thankstext[$\star$]{t1}{Thanks to the title}
+%\thankstext[$\star$]{t1}{Thanks to the title}
 \thankstext{e1}{e-mail: magic1@xxx.xx}
 \thankstext{e2}{e-mail: magic2@xxx.xx}
 
