--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -1,5 +1,8 @@
 \section{Introduction}
 
-\> new: high-statistics data sample (same fill as DS2 from \cite{prl111}).
-\>> eventually beyond dip/bumb
-\>> for the moment only what is relevant for extrapolations to $t=0$
+This report presents a new data sample of elastic scattering at the energy of $\sqrt s = 8\un{TeV}$. Thanks to its very high statistics and an improved analysis technique, an unprecedented precision has been reached in the region of four-momentum transfer squared $|t| \lesssim 0.2\un{GeV^2}$. Both statistical and systematic components of the differential cross-section uncertainty are limited below $1\un{\%}$ (except normalisation). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, extrapolation to $t=0$, used for total cross-section determination. The often used purely exponential extrapolation will be found inadequate and extended models will be provided, however still yielding total cross-section values compatible with our previous results \cite{prl111}.
+
+
+
+%critiquely review hypothesis of purely exponential - phenomenological models, extrapolation to t=0 SO FAR
+%suggest extented extrapolation models
