--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -1,11 +1,7 @@
 \section{Data taking}
 
-The presented measurement is based on data taken in July 2012, during the LHC fill number 2836, where the vertical
-RPs were inserted at $9.5\,\sigma_{\rm beam}$. Two (in the beginning) or three (later) bunches were used, with
-a typical population of $8\cdot10^{10}$ protons, yielding instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The special
-$\beta^* = 90\un{m}$ optics was used... TODO: some description or reference. The main trigger required coincidence between RPs in both arms,
-however combining the near and far units of a station in OR for safe efficiency. In the about $11\un{h}$ long
-data-taking, a luminosity of $735\un{\mu b^{-1}}$ was accumulated, giving
-$7.2\cdot 10^6$ tagged elastic events.
+The presented measurement is based on data taken in July 2012, during the LHC fill number 2836 providing protons colliding at the centre-of-mass energy $\sqrt s = 8\un{TeV}$. The vertical RPs were inserted at distance $9.5$ times the transverse beam size, $\sigma_{\rm beam}$. Initially two, later three colliding bunch-pairs were used, with a typical population of $8\cdot10^{10}$ protons, yielding instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The main trigger required coincidence between RPs in both arms, however combining the near and far units of a station in OR for safe efficiency. In the about $11\un{h}$ long data-taking, a luminosity of $735\un{\mu b^{-1}}$ was accumulated, giving $7.2\cdot 10^6$ tagged elastic events.
+
+A special $\beta^* = 90\un{m}$ optics was used, with essentially the same characteristics as at $\sqrt s = 7\un{TeV}$ \cite{epl96}: low beam divergence, parallel-to-point focussing and large effective length ($L_y \approx 270\un{m}$) in the vertical plane, while almost vanishing effective length $L_x$ in the horizontal plane (simplifying separation of elastic and diffractive events).
 
 %minimal $|t| = 0.027\un{GeV^2}$ % left edge of left most bin
