analysis part corrected
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9684 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -27,3 +27,6 @@ with a precision of about $10\,\mu$rad, and a high trigger efficiency
 ($> 99$\%) can be achieved as the proton trigger selection
 uses all RPs independently.
 
+\todo{define: left/right arm, sector 45/56, near/far unit}
+
+\todo{define: x (horizontal) and y (vertical)}
