--- a/2014/90m paper/elastic_90m_epjc.tex
+++ b/2014/90m paper/elastic_90m_epjc.tex
@@ -67,7 +67,14 @@
 \maketitle
 
 \begin{abstract}
-The TOTEM experiment has determined elastic proton-proton differential cross-section at the centre-of-mass energy $\sqrt s = 8\un{TeV}$ from a new high-statistics data sample obtained with the $\beta^* = 90\un{m}$ optics. Furthermore, thanks to an improved analysis procedure, an unprecedented precision has been reached: both statistical and systematic uncertainties remain below $1\un{\%}$ (except the overall normalisation). This precision allows to exclude a purely exponential cross-section on the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with significance greater than $7\un{\sigma}$. Consequently, the extrapolation to $t=0$ is reviewed and two extended models are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
+The TOTEM experiment has made a high-precision measurement of the elastic 
+proton-proton differential cross-section at the centre-of-mass energy 
+$\sqrt s = 8\un{TeV}$ based on a new high-statistics data sample obtained with 
+the $\beta^* = 90\un{m}$ optics. 
+%Furthermore, thanks to an improved analysis procedure, an unprecedented precision has been reached: 
+Both statistical and systematic uncertainties remain below $1\un{\%}$, except 
+for the contribution from the overall normalisation which was obtained from 
+another data set. This unprecedented precision allows to exclude a purely exponential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$. Consequently, the extrapolation to $t=0$ is reviewed and two extended models are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
 %
 %Analysis of a new dataset obtained at $\sqrt{s} = 8\un{TeV}$ and $\beta^* = 90\un{m}$ optics.
 %High statistics (more than $7\cdot10^{6}$ elastic events)
