--- a/2014/90m paper/elastic_90m_epjc.tex
+++ b/2014/90m paper/elastic_90m_epjc.tex
@@ -73,7 +73,7 @@ $\sqrt s = 8\un{TeV}$ based on a new high-statistics data sample obtained with
 the $\beta^* = 90\un{m}$ optics. 
 %Furthermore, thanks to an improved analysis procedure, an unprecedented precision has been reached: 
 Both statistical and systematic uncertainties remain below $1\un{\%}$, except 
-for the contribution from the overall normalisation which was obtained from 
+the contribution from the overall normalisation which was obtained from 
 another data set. This unprecedented precision allows to exclude a purely exponential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$. Consequently, the extrapolation to $t=0$ is reviewed and two extended models are presented, yielding total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
 %
 %Analysis of a new dataset obtained at $\sqrt{s} = 8\un{TeV}$ and $\beta^* = 90\un{m}$ optics.
@@ -127,24 +127,32 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 
 %----------------------------------------------------------------------------------------------------
 \begin{thebibliography}{99}
-
-\bibitem{prl111}
+%
+\bibitem{plb39} \Name{G. Barbiellini et al.} \REVIEW{Phys.~Lett.}{B39}{1972}{663}.
+\bibitem{plb115} \Name{M. Ambrosio et al.} \REVIEW{Phys.~Lett.}{B115}{1982}{495}.
+\bibitem{npb141} \Name{L. Baksay et al.} \REVIEW{Nucl.~Phys.}{B141}{1978}{1}.
+\bibitem{npb248} \Name{A. Breakstone et al.} \REVIEW{Nucl.~Phys.}{B248}{1984}{253}.
+\bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
+\bibitem{epl96}
+    %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
+\bibitem{epl101-el}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
+
+
+\bibitem{prl111} 
+	\Name{G. Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
+
+\bibitem{alfa} \Name{The ATLAS Collaboration} ATLAS-CONF-2014-040.
 
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
 	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{JINST}{3}{2008}{S08007}
 
-\bibitem{epl96}
-    %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
-
-\bibitem{epl101-el}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
 
 \bibitem{totem-ijmp}
 	% Performance of the Totem Detectors at the LHC
@@ -197,18 +205,18 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 %	\Name{Nakamura K.~\etal{} (Particle Data Group)}
 %	\REVIEW{J.~Phys.}{G37}{2010}{075021}
 
-\bibitem{B_vs_s}
-	\Name{ISR (CR Collaboration)} \REVIEW{Phys.~Lett.}{B62}{1976}{460}; 
-	\Name{ISR (ACHGT Collaboration)} \REVIEW{Phys.~Lett.}{B39}{1972}{663}; 
-	\Name{ISR (R-211)} \REVIEW{Nucl.~Phys.}{B262}{1985}{689}; 
-	\Name{ISR (R-210)} \REVIEW{Phys.~Lett.}{B115}{1982}{495}; 
-	\Name{UA1} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
-	\Name{UA4} \REVIEW{Phys.~Lett.}{B127}{1983}{472} and \REVIEW{Phys. Lett.}{B198}{1987}{583}; 
-	\Name{UA4/2} \REVIEW{Phys.~Lett.}{B316}{1993}{448}; 
-	\Name{CDF} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}; 
-	\Name{E710} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433} and \REVIEW{Nuovo Cimento}{A106}{1992}{123}; 
-	\Name{D0} D0 Note 6056-CONF; 
-	\Name{pp2pp} \REVIEW{Phys.~Lett.}{B579}{2004}{245}
+%\bibitem{B_vs_s}
+%	\Name{ISR (CR Collaboration)} \REVIEW{Phys.~Lett.}{B62}{1976}{460}; 
+%	\Name{ISR (ACHGT Collaboration)} \REVIEW{Phys.~Lett.}{B39}{1972}{663}; 
+%	\Name{ISR (R-211)} \REVIEW{Nucl.~Phys.}{B262}{1985}{689}; 
+%	\Name{ISR (R-210)} \REVIEW{Phys.~Lett.}{B115}{1982}{495}; 
+%	\Name{UA4} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
+%	\Name{UA4} \REVIEW{Phys.~Lett.}{B127}{1983}{472} and \REVIEW{Phys. Lett.}{B198}{1987}{583}; 
+%	\Name{UA4/2} \REVIEW{Phys.~Lett.}{B316}{1993}{448}; 
+%	\Name{CDF} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}; 
+%	\Name{E710} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433} and \REVIEW{Nuovo Cimento}{A106}{1992}{123}; 
+%	\Name{D0} D0 Note 6056-CONF; 
+%	\Name{pp2pp} \REVIEW{Phys.~Lett.}{B579}{2004}{245}
 
 \fi
 
